Added lines of code

--- a/Web Page.html
+++ b/Web Page.html
@@ -12,7 +12,7 @@
 <ul><li><a href="#">link 2</a></li></ul>
 <ul><li><a href="#">link 3</a></li></ul>
 </nav>
-<main><p>Main part of this webpage...Add extra words</p></main>
+<main><p>Main part of this webpage...Add extra words..extra</p></main>
 <aside>Right hand side</aside>
 <footer>&copy; Niji Gomez 2024</footer>
 </body>
