--- a/week3Exe2a.html
+++ b/week3Exe2a.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="webpagestyle.css" />
+    <link rel="stylesheet" href="week3Exe2aStyle.css" />
 </head>
 <body>
   <header>Heading</header>  
-  <nav><ul><li><a href="#">link 1</a></li></ul>
-<ul><li><a href="#">link 2</a></li></ul>
-<ul><li><a href="#">link 3</a></li></ul>
+  <nav><a href="#">link 1</a>
+<a href="#">link 2</a><a href="#">link 3</a>
 </nav>
-<main><p>Main part of this webpage...</p></main>
+<main><p>Lorem ipsum.....</p></main>
 <aside>Right hand side</aside>
 <footer>&copy; Niji Gomez 2024</footer>
 </body>
